# handshake-browser-android

./: CHANGELOG.md  README.md
.github/: FUNDING.yml
android/app/: build.gradle.kts
android/app/src/main/assets/: hns_directory.html
android/app/src/main/java/com/handshake/browser/core/: BrowserSecurityPolicy.kt  SecurityState.kt
android/app/src/main/java/com/handshake/browser/net/: HnsSyncForegroundService.kt  HnsSyncProgress.kt  HnsSyncScheduler.kt  HnsWebSocketBridge.kt  HnsWebSocketFrameCodec.kt  HnsWebSocketRequestPolicy.kt  HnsWebSocketShim.kt  HnsWebViewGatewayInterceptor.kt  LoopbackProxyServer.kt  NativeBridge.kt
android/app/src/main/java/com/handshake/browser/ui/: BrowserWebViewHardening.kt  DiagnosticsActivity.kt  HnsResolverTraceActivity.kt  MainActivity.kt  SettingsActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/handshake/browser/core/: BrowserSecurityPolicyTest.kt
android/app/src/test/java/com/handshake/browser/net/: HnsSyncProgressTest.kt  HnsSyncSchedulerTest.kt  HnsWebSocketFrameCodecTest.kt  HnsWebSocketRequestPolicyTest.kt  HnsWebSocketShimTest.kt  LoopbackProxyServerTest.kt
android/app/src/test/java/com/handshake/browser/ui/: DiagnosticReportTest.kt  OmniboxEditorDecisionTest.kt
docs/: architecture.md  milestones.md  play-store-readiness.md  production-readiness-audit.md  security-model.md  sync-audit.md  version-audit.md
rust/: Cargo.toml  deny.toml
rust/crates/android-ffi/src/: lib.rs
rust/crates/hns-gateway/src/: lib.rs
rust/crates/hns-p2p/src/: lib.rs
rust/crates/hns-resolver/src/: lib.rs
rust/crates/hns-sync/src/: lib.rs
rust/crates/hns-transport/: Cargo.toml
rust/crates/hns-transport/src/: lib.rs
scripts/: play-upload-closed-testing.sh
