[package]
name = "hns-transport"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
h2.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hns-dane.workspace = true
http.workspace = true
quinn.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "time"] }
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
rcgen.workspace = true
